--- a/src/components/DashboardAlumno.css
+++ b/src/components/DashboardAlumno.css
@@ -240,6 +240,8 @@
     border-radius: 5px; /* Bordes redondeados */
     font-size: 16px; /* Tamaño de fuente */
     cursor: pointer; /* Cursor de puntero */
+    margin-left: 50px;
+    margin-top: 20px;
     transition: background-color 0.3s, transform 0.2s; /* Transición suave */
   }
   
@@ -832,7 +834,8 @@
     background-color: #fff5f5;
     font-style: italic;
     font-size: 14px;
-    animation: bounce 1.8s infinite;
+    margin-top: 20px;
+    animation: bounce 2s infinite;
     max-width: 300px;
     line-height: 1.4;
     word-wrap: break-word;
@@ -924,15 +927,19 @@
  
   @keyframes bounce {
     0%, 100% {
-      transform: translateY(0);
+        transform: translateY(0); /* Posición inicial y final */
     }
-    30% {
-      transform: translateY(-8px);
+    25% {
+        transform: translateY(-8px); /* Primer rebote hacia arriba */
     }
-    60% {
-      transform: translateY(4px);
+    50% {
+        transform: translateY(4px);  /* Rebote hacia abajo después del primer rebote */
     }
-  }
+    75% {
+        transform: translateY(-4px); /* Segundo rebote hacia arriba */
+    }
+}
+
   .btn-cerrar-modal-cronogramasss {
   background-color: #011B4B;
   color: white;
