--- a/src/components/DashboardDocente.css
+++ b/src/components/DashboardDocente.css
@@ -354,7 +354,7 @@
 }
 
 .btn-cancelar {
-  background-color: #1a202c;
+  background-color: #011b4b;
   color: white;
   padding: 8px 18px;
   font-size: 14px;
