--- a/src/components/DashboardAlumno.css
+++ b/src/components/DashboardAlumno.css
@@ -566,7 +566,7 @@
   }
   
   .respuesta-asesor-btn.rechazado {
-    background-color: red;
+    background-color: #D32F2F;
     color: white;
   }
   /* Contenedor principal de la sección */
@@ -1062,6 +1062,63 @@
   margin-bottom: 20px;
 }
 
+.modal-observacion-btn-volver-subir {
+  background-color: #2e9e7f;
+  color: white;
+  padding: 8px 14px;
+  border: none;
+  border-radius: 6px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.modal-observacion-btn-volver-subir:hover {
+  background-color: #238f72;
+}
+.btn-estado-observado-actividad {
+  background-color: #ED8936; /* rojo */
+  color: #fff;
+  border: none;
+  padding: 4px 8px;
+  border-radius: 6px;
+  font-size: 13px;
+  cursor: default;
+}
+.btn-eliminar-eleccion {
+  background-color: #d32f2f;
+  color: white;
+  padding: 10px 18px;
+  border: none;
+  border-radius: 6px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.btn-eliminar-eleccion:hover {
+  background-color: #b71c1c;
+}
+.contenedor-eliminar {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.modal-observacion-btn-cerrar-estudiante {
+  background-color: #011b4b;
+  color: white;
+  padding: 8px 14px;
+  border: none;
+  border-radius: 6px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.modal-observacion-btn-cerrar-estudiante:hover {
+  background-color: #1E429F;
+}
 
 .modal-observacion-actions {
   display: flex;
